@@ -6,7 +6,6 @@ import org.junit.Test;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -14,7 +13,7 @@ import java.util.Optional;
 public class ArtistTest {
     @Test
     public void addingAnAlbumToArtistArtistHasAnAlbumInAlbumList() {
-        var metallica = new Artist("Metallica", Collections.singletonList(new Album("Master of Puppets", "rock", LocalDate.of(1986, 3, 3), null, Collections.emptyList())));
+        var metallica = new Artist("Metallica", List.of(new Album("Master of Puppets", "rock", LocalDate.of(1986, 3, 3), null, List.of())));
         Assert.assertFalse(metallica.getAlbums().isEmpty());
         Assert.assertEquals("Master of Puppets", metallica.getAlbums().get(0).getTitleOfAlbum());
         Assert.assertEquals("rock",metallica.getAlbums().get(0).getGenre());
@@ -25,7 +24,7 @@ public class ArtistTest {
     @Test
     public void afterDeletingAnAlbumOfAnArtistTheAlbumIsNoLongerInAlbumList() {
         List<Album> albums = new ArrayList<>();
-        albums.add(new Album("Master of Puppets", "rock", LocalDate.of(1986, 3, 3), null, Collections.emptyList()));
+        albums.add(new Album("Master of Puppets", "rock", LocalDate.of(1986, 3, 3), null, List.of()));
 
         var metallica = new Artist("Metallica", albums);
         metallica.deleteAlbumWithCertainName("Master of Puppets");
@@ -35,7 +34,7 @@ public class ArtistTest {
 
     @Test
     public void searchingForAnAlbumWithACertainTitleReturnsTheSearchedAlbum() {
-        var metallica = new Artist("Metallica", Collections.singletonList(new Album("Master of Puppets", "rock", LocalDate.of(1986, 3, 3), null, Collections.emptyList())));
+        var metallica = new Artist("Metallica", List.of(new Album("Master of Puppets", "rock", LocalDate.of(1986, 3, 3), null, List.of())));
         Optional<Album> masterOfPuppetsOptional = metallica.searchAlbumByAlbumTitle("Master of Puppets");
         Assert.assertTrue(masterOfPuppetsOptional.isPresent());
         Assert.assertEquals("Master of Puppets", masterOfPuppetsOptional.get().getTitleOfAlbum());
@@ -44,11 +43,11 @@ public class ArtistTest {
 
     @Test(expected = IllegalArgumentException.class)
     public void creatingAnAlbumWithNullAlbumTitleShouldResultIllegalArgumentException() {
-        new Album(null, "rock", LocalDate.of(1986,3,3), null, Collections.emptyList());
+        new Album(null, "rock", LocalDate.of(1986,3,3), null, List.of());
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void creatingAnAlbumWithZeroLengthStringAsNameOfCoStarsShouldResultIllegalArgumentException() {
-        new Album("Master of Puppets", "rock", LocalDate.of(1986,3,3), "", Collections.emptyList());
+        new Album("Master of Puppets", "rock", LocalDate.of(1986,3,3), "", List.of());
     }
 }
