@@ -12,7 +12,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 
 public class LibraryFileRepositoryTest {
@@ -27,10 +26,10 @@ public class LibraryFileRepositoryTest {
     @Test
     public void shouldSaveAndLoadLibrary() {
 
-        List<Track> tracks = Collections.singletonList(new Track("Battery", "05:12", false));
+        List<Track> tracks = List.of(new Track("Battery", "05:12", false));
         Album masterOfPuppets = new Album("Master of Puppets", "rock", LocalDate.of(1986, 3, 3), null, tracks);
-        Artist metallica = new Artist("Metallica", Collections.singletonList(masterOfPuppets));
-        Library library = new Library(Collections.singletonList(metallica), Collections.emptyList());
+        Artist metallica = new Artist("Metallica", List.of(masterOfPuppets));
+        Library library = new Library(List.of(metallica), List.of());
 
         Path libraryStorePath = Paths.get(FILE_PATH);
         LibraryFileRepository libraryFileRepository = new LibraryFileRepository(libraryStorePath, new JsonSerializationService());
